# icp

./: deployment-guide.md
oc-messagr_app/: Cargo.toml  README.md  dfx.json  messagr_app.did
oc-messagr_app/src/: lib.rs
oc-messagr_app/src/messagr_app/: Cargo.toml
oc-messagr_app/src/messagr_app/src/: lib.rs
oc-messagr_app/src/messagr_app/src/auth/: discord.rs  facebook.rs  mod.rs  slack.rs  telegram.rs  twitter.rs  whatsapp.rs
oc-messagr_app/src/messagr_app/src/connectors/: discord.rs  facebook.rs  mod.rs  slack.rs  telegram.rs  twitter.rs  whatsapp.rs
oc-messagr_app/src/messagr_app/src/indexing/: metadata.rs  mod.rs  schema.rs  search.rs  text.rs
oc-messagr_app/src/messagr_app/src/query/: mod.rs  openchat.rs  parser.rs  response.rs
oc-messagr_app/src/messagr_app/src/storage/: conversations.rs  messages.rs  mod.rs
oc-messagr_app/src/openchat/: client.rs  embeddings.rs  mod.rs  query.rs  type.rs
oc-messagr_frontend/: README.md  package.json  webpack.config.js
oc-messagr_frontend/src/: index.html  index.jsx
oc-messagr_frontend/src/assets/styles/: main.css
oc-messagr_frontend/src/components/: AIEnhancedQuery.jsx  AdminPanel.jsx  AdvancedSearch.jsx  App.jsx  ConversationInsights.jsx  Header.jsx  QueryInput.jsx  Sidebar.jsx
oc-messagr_frontend/src/context/: AuthContext.js  PlatformContext.js  ThemeContext.js
oc-messagr_frontend/src/hooks/: useApi.js  useMessages.js  usePlatform.js  useQuery.js  userConversations.js
oc-messagr_frontend/src/pages/: ConnectPlatform.jsx  Conversations.jsx  Dashboard.jsx  MessageView.jsx  Settings.jsx
