[workspace]
members = [
    "src/messagr_app",
]

[workspace.dependencies]
candid = "0.9.2"
ic-cdk = "0.11.3"
ic-cdk-macros = "0.8.1"
ic-stable-structures = "0.5.6"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.28.0", features = ["full"] }
async-trait = "0.1.68"
reqwest = { version = "0.11.18", features = ["json"] }
chrono = { version = "0.4.24", features = ["serde"] }
url = "2.3.1"
anyhow = "1.0.71"
thiserror = "1.0.40"
futures = "0.3.28"
log = "0.4.17"
base64 = "0.21.0"
oauth2 = "4.3.0"
hmac = "0.12.1"
sha2 = "0.10.6"
rand = "0.8.5"
openai = "1.0.0"  # For AI-based querying
tantivy = "0.19.2"  # For text indexing
tracing = "0.1.37"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'